# pull-assist

./: .env.example  .gitignore  Dockerfile.proxy  LICENSE  MANIFEST.in  README.md  docker-compose.full.yml  docker-compose.yml  launch-pa.sh  main.py  publish-pypi.sh  pyproject.toml  requirements.txt
agents/: base.py  business_impact.py  change_simulator.py  critic.py  dependency_mapper.py  orchestrator.py  orchestrator_patch.py  risk_evaluator.py  rollback_advisor.py  schema_validator.py  test_gap.py
cli/: __init__.py  app.py  banner.py  config_manager.py  registry.py  ui.py
cli/commands/: admin.py  config_cmd.py  history.py  review.py  status.py
config/: settings.py
github/: client.py  diff_parser.py  diff_static_risks.py  local_client.py
graph/: deployment_advisor.py  evidence_graph.py  propagation_engine.py
memory/: pr_history.db  schema.py  store.py
nginx/: nginx.conf
output/: formatter.py  report_builder.py
server/: __init__.py  proxy.py
tests/: test_agents.py  test_diff_parser.py  test_diff_static_risks.py  test_enhancements.py  test_github_client.py  test_graph_layer.py  test_memory_store.py  test_orchestrator_patch.py  test_proxy_sse.py
tools/: context_budget.py  github_tools.py
